# bspwm-dotfiles

./: .zshrc  README.md  gtkrc-2.0  install.sh  pyproject.toml
Builder/: options.py  packages.py
Builder/creators/: builder.py  patches.py
Builder/src/adapters/logger/: logger.py
Builder/src/adapters/system_manipulation/: component_installer.py  packages.py  post_install_configurator.py  preconfigure_system.py  zsh_configurator.py
Builder/src/adapters/system_manipulation/installers/: __init__.py  aur_installer.py  base_installer.py  pacman_installer.py
Builder/src/adapters/user_interfaces/: __init__.py  base_interface.py  composites.py  driver_install_interface.py  install_interface.py
Builder/src/application/configurator/: enums.py  etc.py
Builder/src/application/configurator/interfaces/: logger.py  system_manipulators.py  user_interface.py
Builder/src/application/configurator/services/: __init__.py  component_installer_service.py  config_installer_service.py  configure_zsh_service.py  dependency_installer_service.py  driver_install_service.py  driver_installer_service.py  post_install_configuration_service.py  preconfigure_system_service.py
Builder/src/run/: install.py
BuilderOld/: options.py
BuilderOld/creators/: drivers.py  software.py
config/: mimeapps.list
config/alacritty/: alacritty.toml
config/bspwm/: bspwmrc
config/polybar/: modules.ini
config/ranger/plugins/ranger_devicons/: devicons.py
config/rofi/: config.rasi
config/sxhkd/: sxhkdrc
(+2 files in other folders)
